@@ -1,5 +1,6 @@
 
 			     BZFlag release notes
+* new bzfs option -tk: team killers do not die
 * add new updates here without heading until a release
 * misc @observer mode fixes - Andrew Greig
 * Improved Mac OS X support - Kevin Avila
